tests/compile-fail_1.62/issue-17--adverse-conditions.stderr
error[E0277]: the trait bound `BadInt: literals::sealed::IntegerLiteral` is not satisfied
  --> $DIR/issue-17--adverse-conditions.rs:31:21
   |
31 | impl OtherTrait for NonZeroLiteral<BadInt> {
   |                     ^^^^^^^^^^^^^^^^^^^^^^ the trait `literals::sealed::IntegerLiteral` is not implemented for `BadInt`
   |
   = help: the following other types implement trait `literals::sealed::IntegerLiteral`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others
note: required by a bound in `NonZeroLiteral`
  --> $DIR/literals.rs:15:30
   |
15 | pub struct NonZeroLiteral<T: sealed::IntegerLiteral>(pub T);
   |                              ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `NonZeroLiteral`

error[E0277]: the trait bound `BadInt: literals::sealed::IntegerLiteral` is not satisfied
  --> $DIR/issue-17--adverse-conditions.rs:32:28
   |
32 |     unsafe fn into_nonzero(self) -> NonZeroUsize {
   |                            ^^^^ the trait `literals::sealed::IntegerLiteral` is not implemented for `BadInt`
   |
   = help: the following other types implement trait `literals::sealed::IntegerLiteral`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others
note: required by a bound in `NonZeroLiteral`
  --> $DIR/literals.rs:15:30
   |
15 | pub struct NonZeroLiteral<T: sealed::IntegerLiteral>(pub T);
   |                              ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `NonZeroLiteral`
